Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <ul class="card-list swiper-wrapper">
           <!-- <marquee behavior="" direction=""> -->
           <li class="card-item swiper-slide">
-            <a href="#" class="card-link">
+            <a href="https://github.com/Rohithaparadha/Portfolio-main" class="card-link">
               <img
                 src="Portfolio.png"
                 alt="Card Image"
@@ -363,6 +363,7 @@
     <script src="link.js"></script>
   </body>
 </html>
+
 
 
 
