--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a href=</i></i></a>
             <a href="" target="_blank"><i class="bx bxl-facebook-circle"></i></a>
         </div>
-        <button class="home_btn"><a href="https://drive.google.com/file/d/1uF9N9xzoArCEq15lc3ObGc5ymhttM9oH/view?usp=sharing"target="_blank">Download Cv</a></button>
+        <button class="home_btn"><a href="https://drive.google.com/file/d/12T7sAj_qXCTLhFsloXNZ8236XbgFJanA/view?usp=drivesdk"target="_blank">Download Cv</a></button>
       </div>
     </section>
 
